.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: achievements-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'le-staging-wildcard-issuer'
spec:
  rules:
    - host: '${INGRESS_URL}'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/'
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/pgadmin/'
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
